--- a/mkdocs-site/mkdocs.yml
+++ b/mkdocs-site/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: My Docs
-site_url: https://lymj.github.io/mymkdocs/
+site_url: https://lymj.github.io/mkdocs-site/
 site_author: 郭磊（lymj）
 theme:
   name: material
