--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: My Docs
-site_url: https://planbisme.github.io/mymkdocs/
+site_url: https://planBisme.github.io/mymkdocs/
 site_author: 郭磊（lymj）
 theme:
   name: material
