--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,67 +1,67 @@
-site_name: lymj
+site_name: 四人帮
 site_url: https://planBisme.github.io/mymkdocs/
 site_author: 郭磊（lymj）
 # theme:
 #   name: material
  
-# theme:
-#   name: material
-#   custom_dir: docs/overrides #覆写路径
-#   # font: #谷歌字体，自行搜索
-#   #   text: Bitter  #文本字体
-#   #   code: Roboto Mono  #代码字体
-#   # logo: assets/favicon.png #左上角logo，可插入图片链接
-#   favicon: https://s2.loli.net/2024/04/26/PmRdM9iGnvOJHgu.png # 网页icon
-#   palette:
-#     - media: "(prefers-color-scheme)"
-#       toggle:
-#         icon: material/link
-#         name: 关闭自动模式
-#     #primary: blue grey
-#     - media: "(prefers-color-scheme: light)"
-#       scheme: default # 日间模式
-#       primary: blue grey # 上方的
-#       accent: blue # 链接等可交互元件的高亮色
-#       # teal
-#       toggle:
-#         icon: material/toggle-switch # 图标
-#         name: 切换至夜间模式 # 鼠标悬浮提示
-#     - media: "(prefers-color-scheme: dark)"
-#       scheme: slate # 夜间模式
-#       primary: black
-#       accent: indigo
-#       # teal
-#       toggle:
-#         icon: material/toggle-switch-off-outline
-#         name: 切换至日间模式
-#   features:
-#     - announce.dismiss #呈现可标记为由用户读取的临时公告，可以包含一个用于取消当前公告的按钮
-#     # - navigation.instant
-#     #- header.autohide  #自动隐藏
-#     - navigation.tracking #地址栏中的 URL 将自动更新为在目录中突出显示的活动锚点
-#     - navigation.tabs #顶级部分将呈现在上面视口标题下方的菜单层中，但在移动设备上保持原样
-#     # - navigation.tabs.sticky  #启用粘性选项卡后，导航选项卡将锁定在标题下方，并在向下滚动时始终保持可见
-#     - navigation.sections #启用部分后，顶级部分在边栏中呈现为1220px以上视口的组，但在移动设备上保持原样
-#     - navigation.top # 返回顶部的按钮 在上滑时出现
-#     - navigation.footer #页脚将呈现在边栏中，但在移动设备上保持原样
-#     - search.suggest # 搜索输入一些字母时推荐补全整个单词
-#     - search.highlight # 搜索出的文章关键词加入高亮
-#     - search.share #搜索分享按钮
-#     - navigation.expand # 打开Tab时左侧目录全部展开
-#     - navigation.indexes #启用节索引页后，可以将文档直接附加到节
-#     - content.tabs.link
-#     - content.tooltips
-#     - content.code.copy #代码复制
-#     - content.action.edit
-#     - content.action.view
-#     - content.code.annotate
-#   language: zh # 一些提示性的文字会变成中文
-#   icon:
-#     repo: fontawesome/brands/github #右上角图标
-#     logo: logo
-# edit_uri: edit/main/docs # 编辑按钮跳转的链接
-# repo_url: https://github.com/Wcowin/Mkdocs-Wcowin # 右上角点击跳转的链接
-# repo_name: Mkdocs-Wcowin # 右上角的名字
+theme:
+  name: material
+  custom_dir: docs/overrides #覆写路径
+  # font: #谷歌字体，自行搜索
+  #   text: Bitter  #文本字体
+  #   code: Roboto Mono  #代码字体
+  # logo: assets/favicon.png #左上角logo，可插入图片链接
+  favicon: https://s2.loli.net/2024/04/26/PmRdM9iGnvOJHgu.png # 网页icon
+  palette:
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/link
+        name: 关闭自动模式
+    #primary: blue grey
+    - media: "(prefers-color-scheme: light)"
+      scheme: default # 日间模式
+      primary: blue grey # 上方的
+      accent: blue # 链接等可交互元件的高亮色
+      # teal
+      toggle:
+        icon: material/toggle-switch # 图标
+        name: 切换至夜间模式 # 鼠标悬浮提示
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate # 夜间模式
+      primary: black
+      accent: indigo
+      # teal
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: 切换至日间模式
+  features:
+    - announce.dismiss #呈现可标记为由用户读取的临时公告，可以包含一个用于取消当前公告的按钮
+    # - navigation.instant
+    #- header.autohide  #自动隐藏
+    - navigation.tracking #地址栏中的 URL 将自动更新为在目录中突出显示的活动锚点
+    - navigation.tabs #顶级部分将呈现在上面视口标题下方的菜单层中，但在移动设备上保持原样
+    # - navigation.tabs.sticky  #启用粘性选项卡后，导航选项卡将锁定在标题下方，并在向下滚动时始终保持可见
+    - navigation.sections #启用部分后，顶级部分在边栏中呈现为1220px以上视口的组，但在移动设备上保持原样
+    - navigation.top # 返回顶部的按钮 在上滑时出现
+    - navigation.footer #页脚将呈现在边栏中，但在移动设备上保持原样
+    - search.suggest # 搜索输入一些字母时推荐补全整个单词
+    - search.highlight # 搜索出的文章关键词加入高亮
+    - search.share #搜索分享按钮
+    - navigation.expand # 打开Tab时左侧目录全部展开
+    - navigation.indexes #启用节索引页后，可以将文档直接附加到节
+    - content.tabs.link
+    - content.tooltips
+    - content.code.copy #代码复制
+    - content.action.edit
+    - content.action.view
+    - content.code.annotate
+  language: zh # 一些提示性的文字会变成中文
+  icon:
+    repo: fontawesome/brands/github #右上角图标
+    logo: logo
+edit_uri: edit/main/docs # 编辑按钮跳转的链接
+repo_url: https://github.com/Wcowin/Mkdocs-Wcowin # 右上角点击跳转的链接
+repo_name: Mkdocs-Wcowin # 右上角的名字
 
 nav: 
   - 主页 : index.md
