--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,7 @@ theme:
 # repo_name: Mkdocs-Wcowin # 右上角的名字
 
 nav: 
-  - 主页 : index.md
+  - MkDocs : index.md
 
   - 算法与数据结构 :
     - 算法模版 : code/demo.md
