--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -2,4 +2,4 @@ authors:
   LYMJ:
     name: 路遥马急    # Author name
     description: Free and casual # Author description
-    avatar: https://s2.loli.net/2024/02/01/gaE47y5fKM6kosV.png         # Author avatar
+    avatar: https://s1.imagehub.cc/images/2025/04/18/09475cd81918913f9b8d45dbf22e1136.jpg         # Author avatar
