--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,8 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material mkdocs-git-committers-plugin
+      - run: pip install mkdocs-material mkdocs-git-committers-plugin mkdocs-git-revision-date-localized-plugin
       - run: mkdocs gh-deploy --force
-
 # name: ci 
 # on:
 #   push:
